<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:orderInCategory="1"
       />

    <item
        android:id="@+id/navigation_sonline"
        android:icon="@mipmap/ic_record_voice_over_black_24dp"
        android:title="@string/title_sonline"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/navigation_soffline"
        android:icon="@mipmap/ic_supervisor_account_black_24dp"
        android:title="@string/title_soffline"
        android:orderInCategory="3"
        />

    <item
        android:id="@+id/navigation_sbook"
        android:icon="@mipmap/ic_book_black_24dp"
        android:title="@string/title_sbook"
        android:orderInCategory="4"
       />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:orderInCategory="5"
        />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@mipmap/ic_settings_black_24dp"
        android:title="@string/title_setting"
        android:orderInCategory="6"
        />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@mipmap/ic_power_settings_new_black_24dp"
        android:title="@string/title_logout"
        android:orderInCategory="7"
       />

</menu>
